<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2012 Humberto Fraga <xisberto@gmail.com>.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
  
  Contributors:
      Humberto Fraga <xisberto@gmail.com> - initial API and implementation
-->
<resources>

    <string name="app_name">Phone To Desktop</string>
    <string name="filter_title">Phone To Desktop</string>
    <string name="txt_authorize">Phone To Desktop needs authorization to access your Google Tasks.</string>
    <string name="txt_waiting_authorization">Waiting authorization process. It may take some time.</string>
    <string name="txt_retry">An error was encountered retrieving data. Retry?</string>
    <string name="txt_authorized_to">Authorized to %s</string>
    <string name="btn_authorize">Authorize your Google account</string>
    <string name="btn_authorize_other">Authorize other Google account</string>
    <string name="txt_preview">Preview</string>
    <string name="txt_options">Options</string>
    <string name="txt_only_links">Send only links</string>
    <string name="txt_unshorten">Unshorten links</string>
    <string name="txt_get_titles">Add titles (if the links lead to web pages)</string>
    <string name="txt_show_preview">Show this preview next time</string>
    <string name="send">Send</string>
    <string name="title_select_account">Select a Google account</string>
    <string name="btn_how_it_works">See how it works</string>
    <string name="btn_about">About Phone To Desktop</string>
    <string name="btn_preferences">Preferences</string>
    <string name="txt_no_links">No link detected, will send original text</string>
    <string name="txt_error_timeout">Could not access server, try again later</string>
    <string name="txt_sending">Sending text</string>
    <string name="txt_sending_multiple">Sending text %1$d of %2$d</string>
    <string name="txt_error_sending">Could not send text</string>
    <string name="txt_error_no_connection">No internet connection</string>
    <string name="txt_error_try_again">Click to view wait list and try again</string>
    <string name="txt_error_list">Could not get the list, try again</string>
    <string name="txt_need_authorize">You need first authorize Phone To Desktop</string>
    <string name="btn_back">Back</string>
    <string name="btn_next">Next</string>
    <string name="txt_tutorial">Phone To Desktop sends links and text from your Android device to your desktop computer</string>
    <string name="txt_tutorial_0">From any application which shares text, choose “share” option.</string>
    <string name="txt_tutorial_1">A list of applications which can receive text will be shown. Choose Phone To Desktop.</string>
    <string name="txt_tutorial_2">You will see a screen with a preview text and some options. Click Send when ready.</string>
    <string name="txt_tutorial_3">There will be a notification while Phone To Desktop sends the text.
		When the text is successfully sent, the notification goes away.</string>
    <string name="txt_tutorial_4">If there\'s some error, or if you don\'t have internet connection, the text is saved on the Wait list.
	    Send all texts or select them to delete or send individually.</string>
    <string name="txt_tutorial_5">To see your sent texts in your desktop or notebook, choose Tasks in Gmail.</string>
    <string name="txt_tutorial_6">You can see the list of sent texts under the "Phone To Desktop" list.</string>
    <string name="link_about_message">https://github.com/xisberto/phonetodesktop</string>
    <string name="txt_about_message">Phone To Desktop is free software (as in freedom). The source code is on GitHub.</string>
    <string name="link_chrome_extension">https://chrome.google.com/webstore/detail/oifdfchgmkfglcccmkoofhbnmkdlbgag</string>
    <string name="txt_chrome_extension">Try our extension for Google Chrome.</string>
    <string name="txt_google_java_api">Phone To Desktop uses Google APIs Client 1.19.1 and Google Tasks API 1.19.1.</string>
    <string name="link_google_java_api">https://github.com/google/google-api-java-client/</string>
    <string name="btn_share_this">Share this link</string>
    <string name="img_about">Phone To Desktop logo</string>
    <string name="send_to">Send link to&#8230;</string>
    <string name="btn_link_list">View sent texts</string>
    <string name="title_activity_link_list">Sent Texts List</string>
    <string name="txt_empty_list">Empty list</string>
    <string name="btn_delete">Delete</string>
    <string name="title_confirm">Confirm delete</string>
    <string name="txt_confirm">Do you want to delete this item?</string>
    <string name="refresh">Refresh</string>
    <string name="btn_wait_list">View wait list</string>
    <string name="title_activity_wait_list">Wait List</string>
    <string name="action_sendall">Send all</string>
    <string name="action_delete_multiple">Delete selected items</string>
    <string name="action_send_multiple">Send selected items</string>

    <plurals name="txt_selected_items">
        <item quantity="one">%d selected item</item>
        <item quantity="other">%d selected items</item>
    </plurals>

    <string name="title_activity_preferences">Preferences</string>
    <string name="title_show_preview">Show text preview</string>
    <string name="sum_show_preview_on">Show preview and options below before sending text</string>
    <string name="sum_show_preview_off">Apply options below and send text without asking</string>
    <string name="title_only_links">Send only links</string>
    <string name="sum_only_links_on">Filter original text, send only links</string>
    <string name="sum_only_links_off">Send original text, plus options below</string>
    <string name="title_unshorten">Unshorten links</string>
    <string name="sum_unshorten_on">Get the real link destination</string>
    <string name="sum_unshorten_off">Send original links</string>
    <string name="title_get_titles">Add pages titles</string>
    <string name="sum_get_titles_on">Add the page title of each link</string>
    <string name="sum_get_titles_off">Don\'t add pages titles</string>

    <string name="sendint_task_notification_title_template">Sendint task: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="sendint_task_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

</resources>