<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2013 Humberto Fraga <xisberto@gmail.com>.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
  
  Contributors:
      Humberto Fraga <xisberto@gmail.com> - initial API and implementation
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:disableDependentsState="true"
        android:key="@string/pref_show_preview"
        android:summaryOff="@string/sum_show_preview_off"
        android:summaryOn="@string/sum_show_preview_on"
        android:defaultValue="true"
        android:title="@string/title_show_preview" />
    <CheckBoxPreference
        android:dependency="@string/pref_show_preview"
        android:key="@string/pref_only_links"
        android:summaryOff="@string/sum_only_links_off"
        android:summaryOn="@string/sum_only_links_on"
        android:title="@string/title_only_links" />
    <CheckBoxPreference
        android:dependency="@string/pref_show_preview"
        android:key="@string/pref_unshorten"
        android:summaryOff="@string/sum_unshorten_off"
        android:summaryOn="@string/sum_unshorten_on"
        android:title="@string/title_unshorten" />
    <CheckBoxPreference
        android:dependency="@string/pref_show_preview"
        android:key="@string/pref_get_titles"
        android:summaryOff="@string/sum_get_titles_off"
        android:summaryOn="@string/sum_get_titles_on"
        android:title="@string/title_get_titles" />

</PreferenceScreen>
