<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2012 Humberto Fraga <xisberto@gmail.com>.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
  
  Contributors:
      Humberto Fraga <xisberto@gmail.com> - initial API and implementation
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:contentDescription="@string/img_about"
            android:scaleType="fitCenter"
            android:src="@drawable/tutorial" />

        <TextView
            android:id="@+id/text_name_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/text_about_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_about_message"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btn_share_about_message"
            android:background="@drawable/btn_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:tag="@string/link_about_message"
            android:text="@string/btn_share_this" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="#CCCCCC" />

        <TextView
            android:id="@+id/text_chrome_extension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_chrome_extension"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btn_share_chrome"
            android:background="@drawable/btn_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:tag="@string/link_chrome_extension"
            android:text="@string/btn_share_this" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="#CCCCCC" />

        <TextView
            android:id="@+id/text_google_java_api"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_google_java_api"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btn_share_google_java_api"
            android:background="@drawable/btn_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:tag="@string/link_google_java_api"
            android:text="@string/btn_share_this" />

    </LinearLayout>

</ScrollView>