<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2012 Humberto Fraga <xisberto@gmail.com>.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
  
  Contributors:
      Humberto Fraga <xisberto@gmail.com> - initial API and implementation
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="net.xisberto.phonetodesktop.ui.MainFragment">

        <Button
            android:id="@+id/btn_link_list"
            android:background="@drawable/btn_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_link_list" />

        <Button
            android:id="@+id/btn_wait_list"
            android:background="@drawable/btn_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_wait_list" />

        <Button
            android:id="@+id/btn_how_it_works"
            android:background="@drawable/btn_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_how_it_works" />

        <TextView
            android:id="@+id/txt_authorize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_authorize"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btn_authorize"
            android:background="@drawable/btn_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/btn_authorize" />

        <Button
            android:id="@+id/btn_preferences"
            android:background="@drawable/btn_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/btn_preferences" />

        <Button
            android:id="@+id/btn_about"
            android:background="@drawable/btn_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/btn_about" />

    </LinearLayout>

</ScrollView>