<!--
  Copyright (c) 2013 Humberto Fraga <xisberto@gmail.com>.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
  
  Contributors:
      Humberto Fraga <xisberto@gmail.com> - initial API and implementation
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".SendFragment">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:elevation="8dp"
        android:background="@color/phonetodesktop_primary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    </android.support.v7.widget.Toolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="?android:windowContentOverlay"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/title_preview"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_preview" />

        <FrameLayout
            android:id="@+id/scrollViewPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <ScrollView
                style="@style/Theme.PhoneToDesktop.PreviewText"
                android:layout_width="match_parent"
                android:layout_height="96dp">

                <TextView
                    android:id="@+id/text_preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp" />
            </ScrollView>

            <ProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:padding="16dp"
                android:visibility="gone" />
        </FrameLayout>

        <TextView
            android:id="@+id/title_options"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_options" />

        <ScrollView
            android:id="@+id/scroll_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_only_links"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/txt_only_links" />

                <CheckBox
                    android:id="@+id/cb_unshorten"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/txt_unshorten" />

                <CheckBox
                    android:id="@+id/cb_get_titles"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/txt_get_titles" />

                <CheckBox
                    android:id="@+id/cb_show_preview"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/txt_show_preview" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>



</LinearLayout>
